# edne-correios-loader

./: .gitignore  HISTORY.md  LICENSE.txt  Makefile  README-en.md  README.md  alchemy_utils.py  dados.py  msg.py  padroes_arquivos.py  pyproject.toml  run.py  tabela_unica.py  tabelas.py  varredura.py
.github/workflows/: coverage-report.yml  lint-and-test.yml  publish.yml  python-package.yml
src/dne_correios_loader/: __init__.py  cep_querier.py  dbwriter.py  exc.py  loader.py  resolver.py  specs.py  table_set.py  tables.py  unified_table.py
src/dne_correios_loader/cli/: __init__.py  logger.py
src/edne_correios_loader/: __init__.py  cep_querier.py  clickhouse_writer.py  dbwriter.py  exc.py  loader.py  resolver.py  table_set.py  tables.py  unified_table.py
src/edne_correios_loader/cli/: __init__.py
tests/: .env.example  __init__.py  conftest.py  dne_data.py  docker-compose.yaml  shared.py  test_cep_querier.py  test_cli.py  test_clickhouse_writer.py  test_custom_table_names.py  test_dbwriter.py  test_loader.py  test_resolver.py  test_table_set.py  test_unified_table.py
