[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "dne-correios-loader"
    dynamic = ["version"]
    description = "Load Correios' DNE Basico text files into your database to enable CEP search"
    readme = "README.md"
    requires-python = ">=3.7"
    license = "MIT"
    keywords = ["Correios", "CEP", "endereço", "address", "DNE", "eDNE", "Brasil"]
    authors = [
        { name = "Cauê Thenório", email = "caue@thenorio.com.br" },
    ]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
    ]
    dependencies = [
        "click~=8.1",
        "sqlalchemy~=2.0",
    ]

    [project.urls]
        Documentation = "https://github.com/cauethenorio/dne-correios-loader#readme"
        Issues = "https://github.com/cauethenorio/dne-correios-loader/issues"
        Source = "https://github.com/cauethenorio/dne-correios-loader"

    [project.scripts]
        dne-correios-loader = "dne_correios_loader.cli:dne_correios_loader"

[tool.hatch.version]
    path = "src/dne_correios_loader/__about__.py"

[tool.hatch.envs.default]
    dependencies = [
        "coverage[toml]>=6.5",
        "pytest",
        "pdbpp",
    ]

    [tool.hatch.envs.default.scripts]
        test = "pytest {args:tests}"
        test-cov = "coverage run -m pytest {args:tests}"
        cov-report = [
            "- coverage combine",
            "coverage report",
        ]
        cov = [
            "test-cov",
            "cov-report",
        ]

[[tool.hatch.envs.all.matrix]]
    python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
    detached = true
    dependencies = [
        "black>=23.1.0",
        "mypy>=1.0.0",
        "ruff>=0.0.243",
    ]
    [tool.hatch.envs.lint.scripts]
        typing = "mypy --install-types --non-interactive {args:src/dne_correios_loader tests}"
        style = [
            "ruff {args:.}",
            "black --check --diff {args:.}",
        ]
        fmt = [
            "black {args:.}",
            "ruff --fix {args:.}",
            "style",
        ]
        all = [
            "style",
            "typing",
        ]

[tool.black]
    target-version = ["py37"]
    line-length = 120

[tool.ruff]
    target-version = "py37"
    line-length = 120
    src = ["src"]
    select = [
        "A",
        "ARG",
        "B",
        "B9",
        "C",
        "C4",
        "DTZ",
        "E", # pycodestyle errors (https://docs.astral.sh/ruff/rules/#error-e)
        "EM",
        "F", # pyflakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
        "FBT",
        "G",
        "I", # isort (https://docs.astral.sh/ruff/rules/#isort-i)
        "ICN",
        "ISC",
        "N", # pep8-naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
        "PIE",
        "PLC",
        "PLE",
        "PLR",
        "PLW",
        "PTH",
        "Q",
        "RET",
        "RUF",
        "S", # flake8-bandit (https://docs.astral.sh/ruff/rules/#flake8-bandit-s)
        "SIM",
        "T",
        "T10",
        "T20",
        "TID",
        "TRY",
        "UP", # pyupgrade (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
        "W", # pycodestyle warnings (https://docs.astral.sh/ruff/rules/#warning-w)
        "YTT" # flake8-2020 (https://docs.astral.sh/ruff/rules/#flake8-2020-ytt)
    ]
    ignore = [
        # Allow non-abstract empty methods in abstract base classes
        "B027",
        # Allow multi-line imports
        "E401",
        # Allow boolean positional values in function calls, like `dict.get(... True)`
        "FBT003",
        # Ignore checks for possible passwords
        "S105", "S106", "S107",
        # Ignore complexity
        "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
        # Allow relative imports
        "TID252",
    ]
    unfixable = [
        # Don't touch unused imports
        "F401",
        # Don't touch unused variables
        "F841",
    ]

    [tool.ruff.isort]
        known-first-party = ["dne_correios_loader"]

    [tool.ruff.flake8-tidy-imports]
        ban-relative-imports = "all"

    [tool.ruff.per-file-ignores]
        # Tests can use magic values, assertions, and relative imports
        "tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
    source_pkgs = ["dne_correios_loader", "tests"]
    branch = true
    parallel = true
    omit = [
        "src/dne_correios_loader/__about__.py",
    ]

[tool.coverage.paths]
    dne_correios_loader = ["src/dne_correios_loader", "*/dne-correios-loader/src/dne_correios_loader"]
    tests = ["tests", "*/dne-correios-loader/tests"]

[tool.coverage.report]
    exclude_lines = [
        "no cov",
        "if __name__ == .__main__.:",
        "if TYPE_CHECKING:",
    ]